# jns-dashboard-backend

./: .gitignore  ASYNC_IMPLEMENTATION_COMPLETE.md  ASYNC_IMPLEMENTATION_STRATEGY.md  Dockerfile  PYDANTIC_V2_RECURSION_FIX_SUMMARY.md  README.md  administrative.md  administrative_api.md  alembic.ini  best_practices_analysis.md  bestpracticetasks.md  customer.md  customerapi.md  docker-compose.yml  final_recursion_test.py  fix_router_imports.py  openapi.yaml  product.md  productapi.md  pydantic_recursion_analysis.py  pydantic_v2_recursion_solution.md  pyproject.toml  requirements.txt  simple_test.py  temp_feature_spec.json  test_async_db.py  test_async_endpoints.py  test_auth_fix.py  test_auth_issue.py  test_models_for_recursion.py  test_models_simple.py  test_neon_db_connection.py  test_pydantic_complex_recursion.py  test_pydantic_recursion.py  test_specific_pydantic_issue.py  test_tracing_fix.py  validate_models.py  vendor.md  vendorapi.md
.specify/memory/: constitution.md
alembic/: env.py
dashboard/: dashboard.py
docs/: api-versioning.md  backup-recovery.md  best-practices-summary.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/general/: 001-fix-product-api-auth.general.prompt.md  1-pydantic-v2-recursion-fix.general.prompt.md  5-analyze-project-best-practices-and-complete-tasks.general.prompt.md  8-all-best-practices-completed.general.prompt.md
history/prompts/regal-pos-backend/: 1-create-spec.spec.prompt.md  2-clarify-spec-requirements.spec.prompt.md  3-create-impl-plan.plan.prompt.md  4-create-task-list.tasks.prompt.md
infrastructure/: main.tf
scripts/: mutation_test.py
specs/001-regal-pos-backend/: spec.md  tasks.md
specs/001-regal-pos-backend/checklists/: requirements.md
specs/001-regal-pos-backend/planning/: data-model.md  plan.md  quickstart.md  research.md
specs/001-regal-pos-backend/planning/contracts/: api-contracts.md
src/: app_startup.py
src/api/: main.py
src/auth/: __init__.py  auth.py  password.py  rbac.py  token_manager.py
src/config/: settings.py
src/database/: __init__.py  database.py  indexes.py
src/middleware/: compression.py  security.py
src/models/: __init__.py  audit_log.py  base.py  custom_order.py  customer.py  expense.py  invoice.py  product.py  refund.py  role.py  salesman.py  stock_entry.py  user.py  vendor.py
src/routers/: __init__.py  admin.py  auth.py  custom_orders.py  customers.py  expenses.py  invoices.py  pos.py  products.py  refunds.py  salesman.py  stock.py  users.py  vendors.py
src/services/: __init__.py  custom_order_service.py  customer_service.py  expense_service.py  invoice_service.py  product_service.py  refund_service.py  salesman_service.py  stock_service.py  user_service.py  vendor_service.py
src/utils/: __init__.py  alerting.py  apm_monitoring.py  audit_logger.py  cache.py  error_handlers.py  input_sanitizer.py  lazy_loading.py  metrics.py  query_optimizer.py  rate_limiter.py  retry_mechanism.py  structured_logging.py  tracing.py
tests/e2e/: test_user_journey_e2e.py
tests/integration/: test_auth_integration.py  test_user_story_integration.py
tests/performance/: load_test.py
tests/property_based/: test_user_properties.py
tests/security/: test_security_controls.py
tests/unit/: conftest.py
tests/unit/models/: test_customer_model.py  test_invoice_model.py  test_product_model.py  test_role_model.py  test_user_model.py
tests/unit/services/: test_product_service.py  test_user_service.py
